# serializer version: 1
# name: test_check_root_admin_exists
  dict({
    'exists': True,
  })
# ---
# name: test_check_root_admin_exists.1
  dict({
    'exists': False,
  })
# ---
# name: test_consolidated_admin_creation
  dict({
    'created_at': '2026-04-17T10:00:00Z',
    'email': 'newbie@e.com',
    'is_deleted': False,
    'is_premium': False,
    'uid': 'target-uid',
    'user_type': 'user',
  })
# ---
# name: test_consolidated_create_root_admin
  dict({
    'created_at': '2026-04-17T10:00:00Z',
    'email': 'root@e.com',
    'is_deleted': False,
    'is_premium': False,
    'uid': 'test-user-123',
    'user_type': 'root_admin',
  })
# ---
# name: test_consolidated_create_root_admin_fails_if_exists
  dict({
    'detail': 'A root admin already exists.',
  })
# ---
# name: test_consolidated_self_registration
  dict({
    'created_at': '2026-04-17T10:00:00Z',
    'email': 'user@e.com',
    'is_deleted': False,
    'is_premium': False,
    'uid': 'test-user-123',
    'user_type': 'user',
  })
# ---
# name: test_create_user_idempotency_self
  dict({
    'created_at': '2026-03-26T12:00:00Z',
    'email': 'existing@e.com',
    'is_deleted': False,
    'is_premium': False,
    'uid': 'test-user-123',
    'user_type': 'user',
  })
# ---
# name: test_delete_last_root_admin_fails
  dict({
    'detail': 'Cannot delete the last active root admin.',
  })
# ---
# name: test_delete_root_admin_unauthorized
  dict({
    'detail': 'Only a Root Admin can delete another Root Admin.',
  })
# ---
# name: test_delete_user_not_found
  dict({
    'detail': 'User not found',
  })
# ---
# name: test_get_me
  dict({
    'created_at': '2026-03-26T12:00:00Z',
    'email': 'test@example.com',
    'is_deleted': False,
    'is_premium': True,
    'uid': 'test-user-123',
    'user_type': 'user',
  })
# ---
# name: test_get_me_self_healing
  dict({
    'created_at': '2026-04-17T10:00:00Z',
    'email': 'new@e.com',
    'is_deleted': False,
    'is_premium': False,
    'uid': 'test-user-123',
    'user_type': 'user',
  })
# ---
# name: test_health
  dict({
    'service': 'users',
    'status': 'ok',
  })
# ---
# name: test_list_users_admin
  list([
    dict({
      'created_at': '2026-03-26T12:00:00Z',
      'email': 'u1@e.com',
      'is_deleted': False,
      'is_premium': False,
      'uid': 'user1',
      'user_type': 'user',
    }),
  ])
# ---
# name: test_list_users_include_deleted
  list([
    dict({
      'created_at': '2026-03-26T12:00:00Z',
      'email': 'u1@e.com',
      'is_deleted': False,
      'is_premium': False,
      'uid': 'u1',
      'user_type': 'user',
    }),
    dict({
      'created_at': '2026-03-26T12:00:00Z',
      'email': 'u2@e.com',
      'is_deleted': True,
      'is_premium': False,
      'uid': 'u2',
      'user_type': 'user',
    }),
  ])
# ---
# name: test_list_users_unauthorized
  dict({
    'detail': 'Admin or Root Admin role required',
  })
# ---
# name: test_restore_user_not_found
  dict({
    'detail': 'User not found',
  })
# ---
# name: test_restore_user_success
  dict({
    'created_at': '2026-04-17T10:00:00Z',
    'email': 'u1@e.com',
    'is_deleted': False,
    'is_premium': False,
    'uid': 'user1',
    'user_type': 'user',
  })
# ---
# name: test_update_me_not_found
  dict({
    'detail': 'User not found',
  })
# ---
# name: test_update_me_success
  dict({
    'created_at': '2026-04-17T10:00:00Z',
    'email': 'test@e.com',
    'is_deleted': False,
    'is_premium': True,
    'uid': 'test-user-123',
    'user_type': 'user',
  })
# ---
# name: test_update_me_validation_error
  dict({
    'detail': list([
      dict({
        'input': 'not-a-bool',
        'loc': list([
          'body',
          'is_premium',
        ]),
        'msg': 'Input should be a valid boolean, unable to interpret input',
        'type': 'bool_parsing',
      }),
    ]),
  })
# ---
